--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,24 +6,36 @@ branches:
   only:
     - main  # ветка git
 
-build: off  # будем использовать свой скрипт сборки
+environment:
+  GRADLE_USER_HOME: $HOME/.gradle
+  JAVA_HOME: /usr/lib/jvm/java-11-openjdk-amd64
 
-install:
-  # запускаем SUT (& означает, что в фоновом режиме не блокируем терминал для запуска тестов)
-  - chmod +x gradlew
+# Устанавливаем зависимости перед сборкой
+init:
+  - sudo apt-get update
+  - sudo apt-get install -y openjdk-11-jdk       # Установка Java 11
+  - sudo apt-get install -y gradle               # Установка Gradle
+  - sudo apt-get install -y docker-compose       # Установка Docker Compose
 
+# Скачивание зависимостей и сборка проекта
 build_script:
-  - ./gradlew clean build
+  - gradle clean build                           # Сборка проекта
 
+# Поднимаем необходимые Docker сервисы перед тестированием
 before_test:
-  - docker-compose up -d
-  - java -jar ./artifacts/aqa-shop.jar &
+  - docker-compose up -d                         # Запуск Docker Compose
 
+# Выполняем тесты
 test_script:
   # Подождем, пока контейнеры поднимутся
   - sleep 10
-  - ./gradlew test
-  
+
+  # Выполняем тесты через Gradle
+  - gradle test
+
+  # Или можно запускать JAR файл, если есть задача для его создания
+  # - java -jar build/libs/your-project.jar
+
 # Завершаем работу контейнеров после тестов
 after_test:
   - docker-compose down
